--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                     <div class="workout-stats"></div>
                     <div class="buttons">
                       <a href="/exercise?" class="huge ui blue button">Continue Workout</a>
-                      <a href="/exercise" class="huge positive ui button" onclick="createANewFunction()">New Workout</a>
+                      <a href="/exercise" class="huge positive ui button" onclick="createANewWorkout()">New Workout</a>
                     </div>
                   </div>
                 </div>
