--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="new-workout">
+                <div class="new-workout huge positive ui button">
                   <h3>Create Your First Workout</h3>
                 </div>
               </div>
