--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                     <div class="workout-stats"></div>
                     <div class="buttons">
                       <a href="/exercise?" class="huge ui blue button">Continue Workout</a>
-                      <button href="/exercise" type= "button" class="huge positive ui button" onclick="createANewWorkout()">New Workout</button>
+                      <button href="/exercise" type= "button" class="huge positive ui button">New Workout</button>
                     </div>
                   </div>
                 </div>
