--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,13 @@
                     <div class="workout-stats"></div>
                     <div class="buttons">
                       <a href="/exercise?" class="huge ui blue button">Continue Workout</a>
-                      <button href="/exercise" type= "button" class="huge positive ui button">New Workout</button>
+                      <a href="/exercise"  class="huge positive ui button">New Workout</a>
                     </div>
                   </div>
                 </div>
-                <div class="new-workout huge positive ui button">
+                <!-- <div class="new-workout huge positive ui button">
                   <h3>Create Your First Workout</h3>
-                </div>
+                </div> -->
               </div>
         </div>
       </div>
